feat(api): - avatar \ public \ unique - теперь без авторизации (только в header project_id должен быть) \\ добавил api changePassword \\ теперь вместо пустых json от правляется { result: true } \\ EMAIL_AS_LOGIN - теперь не актуально (ибо username и email могут и не быть, главное userId)
